install/argocd-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  rules:
    - host: argocd-jx.gitpops.net
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
