install/tekton-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Tekton Pipeline Dashboard
    nginx.ingress.kubernetes.io/auth-secret: tekton-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  rules:
    - host: tekton-jx.gitpops.net
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
